{
    "name": "Controls",
    "maps": [
        {
            "name": "Deplacement",
            "id": "a28fe057-3e62-4751-8c55-9fa668bfdf7a",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1d5e607a-21f9-458b-958e-9cda99221f50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Deplacement",
                    "type": "Value",
                    "id": "333d44e5-0b9e-4962-9c96-c5a0292897e4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac656ea5-14d9-46be-9b37-04d9ac08a029",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Horizontal",
                    "id": "df485f6e-bf34-4f1b-9b3f-1532605e7229",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deplacement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8990a237-dba4-49c0-98d2-801e1ae09ada",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deplacement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8d9d6f46-4462-462e-a3c1-ffcbe9072c25",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deplacement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "NetTest",
            "id": "404a201e-945c-4225-91e5-d7ae9e098737",
            "actions": [
                {
                    "name": "ChangeScene",
                    "type": "Button",
                    "id": "8f2c7179-3cf3-4e41-afbd-d77d0cebeccb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "927d7639-6d6a-4efa-8469-0ef0fa95056b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "26ac07b2-36b0-4d6b-974b-01126cf8e28e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "409ac340-ca0d-4f47-822f-54e631b6eda4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Cri",
            "id": "15a7e9cd-70a7-432e-9396-4fe88100bc35",
            "actions": [
                {
                    "name": "CriUp",
                    "type": "Button",
                    "id": "25e5b478-f057-45e2-a7c5-c9f586b6b4b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CriDown",
                    "type": "Button",
                    "id": "bc6107db-c0c5-4fa5-a5e5-909ca7f81f5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d9c271e-06ee-4772-b4d6-bb426347d34b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CriUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a67b8866-a457-4599-bfb9-464fedb4fa3a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CriDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}